fix: adds css for left aligned ctas

--- a/less/components/consonant/cards/flex.less
+++ b/less/components/consonant/cards/flex.less
@@ -204,6 +204,29 @@
             }
         }
 
+        &.text-left {
+            .consonant-CardFooter-row {
+                justify-content: flex-start;
+            }
+
+            .consonant-CardFooter-cell {
+                flex-grow: 0;
+            }
+
+            .consonant-CardFooter-cell--left {
+                padding-right: 20px;
+            }
+
+            .consonant-CardFooter-cell--center {
+                justify-content: flex-start;
+                padding-right: 20px;
+            }
+
+            .consonant-CardFooter-cell--right {
+                justify-content: flex-start;
+            }
+        }
+
         &.text-center {
             .consonant-Card-content * {
                 text-align: center;
